--- a/app/views/caseaccess/pages/mycases-ro.html
+++ b/app/views/caseaccess/pages/mycases-ro.html
@@ -13,6 +13,10 @@ My work
           </div>
     </div>
     <p>See your tasks and view tasks available for you to pick up.</p>
+    {{ govukButton({
+  text: "Show my work settings",
+  classes: "govuk-button--secondary"
+}) }}
     <div class="hmcts-scrollable-pane">
       <div class="hmcts-scrollable-pane__wrapper">
         <nav class="hmcts-sub-navigation">
