--- a/app/views/caseaccess/pages/mywork-s2o.html
+++ b/app/views/caseaccess/pages/mywork-s2o.html
@@ -13,6 +13,10 @@ My work
           </div>
     </div>
     <p>See your tasks and view tasks available for you to pick up.</p>
+    {{ govukButton({
+  text: "Show my work settings",
+  classes: "govuk-button--secondary"
+}) }}
     <div class="hmcts-scrollable-pane">
       <div class="hmcts-scrollable-pane__wrapper">
         <nav class="hmcts-sub-navigation">
@@ -32,36 +36,31 @@ My work
                 My cases
               </a>
             </li>
-            <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="#">
-                Change work view
-              </a>
-            </li>
+
           </ul>
         </nav>
                     <table class="govuk-table ">
                         <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 320px;" aria-sort="ascending"><button type="button" data-index="0">Case reference</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 220px;" aria-sort="none"><button type="button" data-index="1">Case name</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
-                            <th scope="col" class="govuk-table__header"></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 80px;" aria-sort="none"><button type="button" data-index="1">Due</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"></th>
-                        </tr>
-                        </thead>
-                        <tbody class="govuk-table__body">
-                            <tr class="govuk-table__row">
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00467-2017-a">8999-6730-3210-1121</a></td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review specific access request</td>
-                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">12 feb</span> </td>
-                                <td class="govuk-table__cell"><a href="mywork-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+                          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 220px;" aria-sort="none"><button type="button" data-index="1">Case name</button></th>
+                          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
+                          <th scope="col" class="govuk-table__header"></th>
+                          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
+                          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+                          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"></th>
+                      </tr>
+                      </thead>
+                      <tbody class="govuk-table__body">
+                          <tr class="govuk-table__row">
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00467-2017-a">Amelia Chu</a></td>
+
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00467-2017-tr" class="right_l">Review specific access request</a></td>
+                              <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">12 Feb</span> </td>
+                              <td class="govuk-table__cell"><a href="mywork-s2o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                             <tr class="govuk-table__row">
                                 <td colspan="8" class="govuk-table__cell right"><a href="PA-00467-2017-tr" class="right_l">Review request</a></td>
