Added data wiping, better ccd data for dropdowns and radios and new content from dan

--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -27,7 +27,7 @@ Case details
         <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 33%;">Case name</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 20%;">Service</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 33%;">Court or Hearing centre</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 33%;">Court or hearing centre</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 7%;">State</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 7%;"></th>
         </tr>
