--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -34,7 +34,7 @@ Case details
         </thead>
 
         {% if  data.results == 'many'   %}
-            <!-- One result -->s
+            <!-- One result -->
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v Narran</td>
@@ -48,17 +48,25 @@ Case details
             <!-- One result -->
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">King v King</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Divorce</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">West Midlands Divorce Unit (Stoke)</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Open</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
+                </tr>
+
+                <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v Narran</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Money claims</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Private law</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bath Law Courts</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Open</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018">Request access</a></td>
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v Narran</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Smith v Kuang</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Money claims</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bath Law Courts</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lincoln County Court and Family Court</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Closed</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
                 </tr>
