--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -729,7 +729,9 @@ Case details
 </div>
 -->
 
+
 <form method="post"  action="#" class="for4" style=" float: left; margin-top: 50px;">
+    <p style="margin-bottom: 0px;">Select to show validation errors</p>
     <select style="height:25px;" onchange="window.location.href='?'+this.value">
 
         <option value=""
