--- a/app/views/caseaccess/pages/mycases-r.html
+++ b/app/views/caseaccess/pages/mycases-r.html
@@ -33,7 +33,7 @@ My work
             </li>
             <li class="hmcts-sub-navigation__item">
               <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases-r">
-                My cases
+                My cases <span class="xui-alert-link__number">1 </span>
               </a>
             </li>
 
@@ -80,7 +80,7 @@ My work
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 505px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 320px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"></th>
@@ -88,12 +88,12 @@ My work
               </thead>
               <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00321-2018-a">Robert Saddlebrook</a></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged access until [duration]</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00321-2018-a"><Strong>Robert Saddlebrook</strong></a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Immigration and Asylum</Strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Protection</Strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Challenged</Strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>14 Mar 2021</Strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>14 Apr 2021</Strong></td>
                     <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
                 </tr>
 
