--- a/app/views/caseaccess/pages/mycases-p.html
+++ b/app/views/caseaccess/pages/mycases-p.html
@@ -90,9 +90,9 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request with [Name of approver]</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell"></td>
                 </tr>
                   <tr class="govuk-table__row">
