--- a/app/views/caseaccess/pages/mycases-ro.html
+++ b/app/views/caseaccess/pages/mycases-ro.html
@@ -43,6 +43,73 @@ My work
             </li>
           </ul>
         </nav>
+
+        <table class="govuk-table ">
+            <thead class="govuk-table__head">
+              <tr class="govuk-table__row">
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 405px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                  <th scope="col" class="govuk-table__header"></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;" aria-sort="none"></th>
+              </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leadership Judge</td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">Today</span> </td>
+                    <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">9 nov</span>  </td>
+                    <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                </tr>
+            </tbody>
+        </table>
+          <h2 class="govuk-heading-m">My access</h2>
+          <table class="govuk-table ">
+              <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 505px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"></th>
+                </tr>
+              </thead>
+              <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00321-2018-a">Robert Saddlebrook</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
+                    <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
+                </tr>
+
+              </tbody>
+          </table>
+
+
+
+
+
+
+
         <table class="govuk-table ">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
