--- a/app/views/caseaccess/pages/mycases-tc.html
+++ b/app/views/caseaccess/pages/mycases-tc.html
@@ -33,14 +33,10 @@ My work
             </li>
             <li class="hmcts-sub-navigation__item">
               <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases">
-                My cases
+                My cases <span class="xui-alert-link__number">1 </span>
               </a>
             </li>
-            <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="change">
-                Change work view
-              </a>
-            </li>
+
           </ul>
         </nav>
         <h2 class="govuk-heading-m">My roles</h2>
@@ -84,21 +80,21 @@ My work
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 505px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 320px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
                     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"></th>
                 </tr>
               </thead>
               <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/PA-00467-2017-atc">Amelia Chu</a></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access until [duration]</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
-                    <td class="govuk-table__cell"><a href="#">Goto case</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/PA-00467-2017-atc"><strong>Amelia Chu</strong></a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Apr 2021</strong></td>
+                    <td class="govuk-table__cell"><a href="/caseaccess/pages/PA-00467-2017-atc">Goto case</a></td>
                 </tr>
 
               </tbody>
