--- a/app/views/caseaccess/pages/PA-00467-2017-araa.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-araa.html
@@ -116,7 +116,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">24 Jan 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -126,7 +126,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Feb 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Feb 2021</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
 
             </tr>
 
@@ -158,7 +158,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">24 Jan 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: 100px;"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: 100px;"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
 
             </tr>
 
