case search updated from testing and new direct search added

--- a/app/views/searchcases/layoutjudicial.html
+++ b/app/views/searchcases/layoutjudicial.html
@@ -104,6 +104,11 @@
                             </ul>
                         </nav>
                     </div>
+
+                    <div>
+
+                    </div>
+
                 </div>
 
             </div>
