--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -21,7 +21,7 @@
                 <p><a  href="/searchcases/pages/caselist?usertype=judiciary&">Caselist</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=judiciary&">Search entry</a></p>
                 <p><a  href="/searchcases/pages/results?results=few&usertype=judiciary&">Search results</a></p>
-                <p><a  href="/searchcases/pages/results?results=many&usertype=judiciary&">Many results</a></p>
+                <!-- <p><a  href="/searchcases/pages/results?results=many&usertype=judiciary&">Many results</a></p>  -->
             </div>
 
             <div>
@@ -29,7 +29,7 @@
                 <p><a  href="/searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Search entry</a></p>
                 <p><a  href="/searchcases/pages/results?results=few&usertype=staff&">Search results</a></p>
-                <p><a  href="/searchcases/pages/results?results=many&usertype=staff&">Many results</a></p>
+                <!-- <p><a  href="/searchcases/pages/results?results=many&usertype=staff&">Many results</a></p>  -->
             </div>
 
         </div>
