--- a/app/views/searchcases/layoutstaff.html
+++ b/app/views/searchcases/layoutstaff.html
@@ -91,20 +91,40 @@
 
             </div>
 
-            <div class="hmcts-header__container" style="width: 1220px;">
+            <div class="hmcts-header__container" style="width:806px;">
                 {{ hmctsPrimaryNavigation({
                 label: 'Primary navigation',
                 items: [{
                 text: 'Case list',
                 href: getUrl('/pages/caselist'),
                 active: pageId == '#'
+                },
+                {
+                text: 'Search cases',
+                href: getUrl('/searchcases/pages/startsearch'),
+                active: pageId == '#'
                 }
                 ]
                 }) }}
             </div>
 
-            <div class="hmcts-primary-navigation__search" style="width:122px;">
-                <a class="hmcts-search-toggle__button" href="/searchcases/pages/startsearch" ">Find case</a>
+            <div class="hmcts-primary-navigation__search" style=" display: flex; flex-direction: row;">
+
+                <!--
+                <div style="width: 100px;">
+                    <a class="hmcts-search-toggle__button" href="">Find case</a>
+                </div>
+                -->
+
+                <div style="display: flex;flex-direction: row; ">
+                    <p style="color: white; margin-top:8px; margin-bottom: 0px;">Case reference:  &nbsp;</p>
+                    <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:204px;">
+                    <a href="results-s2" role="button" draggable="false" class="govuk-button govuk-button--secondary"
+                       style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
+                        Open
+                    </a>
+                </div>
+
             </div>
 
         </div>
