--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -28,7 +28,7 @@ Case details
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 33%;">Case name</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 20%;">Service</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 33%;">Court or hearing centre</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 7%;">State</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 7%;">Status</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 7%;"></th>
         </tr>
         </thead>
@@ -48,27 +48,27 @@ Case details
             <!-- One result -->
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">King v King</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v Macallister</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Divorce</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">West Midlands Divorce Unit (Stoke)</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Open</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v Narran</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Private law</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bath Law Courts</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Open</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018">Request access</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Smith v Kuang</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Money claims</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lincoln County Court and Family Court</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v King</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Divorce</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Open</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018-request">Challenged access</a></td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v North</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Closed</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00467-2017-request">Specific access</a></td>
                 </tr>
             </tbody>
         {% endif %}
