--- a/app/views/searchcases/layoutstaff.html
+++ b/app/views/searchcases/layoutstaff.html
@@ -119,9 +119,9 @@
                 <div style="display: flex;flex-direction: row; ">
                     <p style="color: white; margin-top:8px; margin-bottom: 0px;">Case reference:  &nbsp;</p>
                     <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:204px;">
-                    <a href="results-s2" role="button" draggable="false" class="govuk-button govuk-button--secondary"
+                    <a href="/opencase" role="button" draggable="false" class="govuk-button govuk-button--secondary"
                        style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
-                        Open
+                        Find
                     </a>
                 </div>
 
