--- a/app/views/searchcases/layoutjudicial.html
+++ b/app/views/searchcases/layoutjudicial.html
@@ -80,32 +80,41 @@
 
 
                 <div  style="background-color: #8d100e">
-                    <div style=" display: flex; margin: 0 auto; background-color: #8d100e">
 
-                        <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style="background-color: #8d100e">
-                            <ul class="hmcts-primary-navigation__list">
-                                <li class="hmcts-primary-navigation__item">
-                                    <a class="hmcts-primary-navigation__link" href="/searchcases/pages/caselist">
-                                        Your cases
-                                    </a>
-                                </li>
-                                <!-- Not in live
-                                <li class="hmcts-primary-navigation__item">
-                                    <a class="hmcts-primary-navigation__link" href="/searchcases/solicitor/caselist">
-                                        Your hearings
-                                    </a>
-                                </li>
-                                -->
-                                <li class="hmcts-primary-navigation__item">
-                                    <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
-                                        Search cases
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+                    <div style=" display: flex; margin: 0 auto; background-color: #8d100e; ">
 
-                    <div>
+                        <div>
+                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style="background-color: #8d100e; width: 406px;">
+                                <ul class="hmcts-primary-navigation__list">
+                                    <li class="hmcts-primary-navigation__item">
+                                        <a class="hmcts-primary-navigation__link" href="/searchcases/pages/caselist">
+                                            Your cases
+                                        </a>
+                                    </li>
+                                    <!-- Not in live
+                                    <li class="hmcts-primary-navigation__item">
+                                        <a class="hmcts-primary-navigation__link" href="/searchcases/solicitor/caselist">
+                                            Your hearings
+                                        </a>
+                                    </li>
+                                    -->
+                                    <li class="hmcts-primary-navigation__item">
+                                        <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
+                                            Search cases
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+
+                        <div style="display: flex;flex-direction: row; ">
+                            <p style="color: white; margin-top:8px; margin-bottom: 0px;">Case reference:  &nbsp;</p>
+                            <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:204px;">
+                            <a href="/opencase" role="button" draggable="false" class="govuk-button govuk-button--secondary"
+                               style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
+                                Find
+                            </a>
+                        </div>
 
                     </div>
 
