fixes and updates to links

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -18,17 +18,19 @@
 
             <div style="width: 250px;">
                 <h2 class="govuk-heading-m">Judiciary</h2>
-                <p><a  href="/searchcases/pages/caselist?usertype=judiciary&">Caselist</a></p>
+
                 <p><a  href="/searchcases/pages/startsearch?usertype=judiciary&">Search entry</a></p>
                 <p><a  href="/searchcases/pages/results?results=few&usertype=judiciary&">Search results</a></p>
+                <p><a  href="/searchcases/pages/caselist?usertype=judiciary&">Existing caselist</a></p>
                 <!-- <p><a  href="/searchcases/pages/results?results=many&usertype=judiciary&">Many results</a></p>  -->
             </div>
 
             <div>
                 <h2 class="govuk-heading-m">Legal Advisers, Caseworkers, CTSC, and more</h2>
-                <p><a  href="/searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
                 <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Search entry</a></p>
                 <p><a  href="/searchcases/pages/results?results=few&usertype=staff&">Search results</a></p>
+
+                <p><a  href="/searchcases/pages/caselist?usertype=staff&">Existing caselist</a></p>
                 <!-- <p><a  href="/searchcases/pages/results?results=many&usertype=staff&">Many results</a></p>  -->
             </div>
 
