--- a/app/views/searchcases/layoutstaff.html
+++ b/app/views/searchcases/layoutstaff.html
@@ -101,7 +101,7 @@
                 },
                 {
                 text: 'Search cases',
-                href: getUrl('/searchcases/pages/startsearch'),
+                href: getUrl('/pages/startsearch'),
                 active: pageId == '#'
                 }
                 ]
