content error fixes

--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -36,7 +36,7 @@ Case details
             <div class="govuk-error-summary__body">
                 <ul class="govuk-list govuk-error-summary__list">
                     <li>
-                        <a href="#postcodeerrorarea">Enter a valid postcode</a>
+                        <a href="#postcodeerrorarea">Enter a postcode, like AA1 1AA</a>
                     </li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@ Case details
             <div class="govuk-error-summary__body">
                 <ul class="govuk-list govuk-error-summary__list">
                     <li>
-                        <a href="#emailcodeerrorarea">Enter a valid email address</a>
+                        <a href="#emailcodeerrorarea">Enter an email address in the correct format, like name@example.com</a>
                     </li>
                 </ul>
             </div>
