--- a/app/views/caseaccess/pages/PA-00321-2018.html
+++ b/app/views/caseaccess/pages/PA-00321-2018.html
@@ -43,6 +43,50 @@ Case details
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
+            Service
+          </dt>
+          <dd class="govuk-summary-list__value">
+            	Immigration and Asylum
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Court or hearing centre
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Manchester Civil Justice Centre
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Status
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Open
+          </dd>
+        </div>
+    
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Access
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Challenged
+          </dd>
+        </div>
+      </dl>
+<!--
+      <dl class="govuk-summary-list">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Case name
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Robert Saddlebrook
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
             Status
           </dt>
           <dd class="govuk-summary-list__value">
@@ -82,6 +126,8 @@ Case details
           </dd>
         </div>
       </dl>
+      -->
+
     </div>
     {{ govukButton({
   text: "Request access",
