--- a/app/views/caseaccess/pages/PA-00467-2017.html
+++ b/app/views/caseaccess/pages/PA-00467-2017.html
@@ -37,6 +37,50 @@ Specific access.<br>Access requires manual authorisation. Access to this case is
             Case name
           </dt>
           <dd class="govuk-summary-list__value">
+            Amelia Chu
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Service
+          </dt>
+          <dd class="govuk-summary-list__value">
+            	Immigration and Asylum
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Court or hearing centre
+          </dt>
+          <dd class="govuk-summary-list__value">
+            	City of London Magistrates' Court
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Status
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Open
+          </dd>
+        </div>
+
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Access
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Specific
+          </dd>
+        </div>
+      </dl>
+<!--
+      <dl class="govuk-summary-list">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            Case name
+          </dt>
+          <dd class="govuk-summary-list__value">
           Amelia Chu
           </dd>
         </div>
@@ -79,6 +123,7 @@ Specific access.<br>Access requires manual authorisation. Access to this case is
             </dd>
           </div>
       </dl>
+      -->
     </div>
     {{ govukButton({
   text: "Request access",
