--- a/app/views/caseaccess/pages/available-tasks.html
+++ b/app/views/caseaccess/pages/available-tasks.html
@@ -14,7 +14,7 @@ My work
     </div>
     <p>See your tasks and view tasks available for you to pick up.</p>
     {{ govukButton({
-  text: "Show my work settings",
+  text: "Filter my work",
   classes: "govuk-button--secondary"
 }) }}
     <div class="hmcts-scrollable-pane">
@@ -39,17 +39,18 @@ My work
           </ul>
         </nav>
         <table class="govuk-table ">
-            <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 220px;" aria-sort="none"><button type="button" data-index="1">Case name</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
-                <th scope="col" class="govuk-table__header"></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 140px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 125px;" aria-sort="none"></th>
-            </tr>
-            </thead>
+          <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 220px;" aria-sort="none"><button type="button" data-index="1">Case name</button></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
+            <th scope="col" class="govuk-table__header"></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+<th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"></th>
+        </tr>
+        </thead>
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
 
@@ -58,7 +59,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">2 days</span> </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">4 days</span> </td>
+                    <td class="govuk-table__cell">14/03/2021</td>
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
@@ -68,7 +70,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">9 days</span>  </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">3 days</span>  </td>
+                    <td class="govuk-table__cell">14/03/2021</td>
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
@@ -80,7 +83,8 @@ My work
                     <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                     C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">9 days</span>  </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">3 days</span>  </td>
+                    <td class="govuk-table__cell">N/A</td>
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
@@ -90,7 +94,8 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">9 days</span>  </td>
+                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">1 days</span>  </td>
+                    <td class="govuk-table__cell">N/A</td>
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
             </tbody>
