--- a/app/views/caseaccess/pages/mycases-r.html
+++ b/app/views/caseaccess/pages/mycases-r.html
@@ -14,7 +14,7 @@ My work
     </div>
     <p>See your tasks and view tasks available for you to pick up.</p>
     {{ govukButton({
-  text: "Show my work settings",
+  text: "Filter my work",
   classes: "govuk-button--secondary"
 }) }}
     <div class="hmcts-scrollable-pane">
