--- a/app/views/caseaccess/pages/mywork-s2.html
+++ b/app/views/caseaccess/pages/mywork-s2.html
@@ -14,7 +14,7 @@ My work
     </div>
     <p>See your tasks and view tasks available for you to pick up.</p>
     {{ govukButton({
-  text: "Show my work settings",
+  text: "Filter my work",
   classes: "govuk-button--secondary"
 }) }}
     <div class="hmcts-scrollable-pane">
@@ -40,18 +40,18 @@ My work
           </ul>
         </nav>
                     <table class="govuk-table ">
-                        <thead class="govuk-table__head">
-                        <tr class="govuk-table__row">
-
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 220px;" aria-sort="none"><button type="button" data-index="1">Case name</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
-                            <th scope="col" class="govuk-table__header"></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
-                            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"></th>
-                        </tr>
-                        </thead>
+                      <thead class="govuk-table__head">
+                      <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 220px;" aria-sort="none"><button type="button" data-index="1">Case name</button></th>
+                        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
+                        <th scope="col" class="govuk-table__header"></th>
+                        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
+                        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+<th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
+                        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"></th>
+                    </tr>
+                    </thead>
                         <tbody class="govuk-table__body">
                             <tr class="govuk-table__row">
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00467-2017-a">Amelia Chu</a></td>
@@ -60,7 +60,8 @@ My work
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00467-2017-tr" class="right_l">Review specific access request</a></td>
-                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">12 Feb</span> </td>
+                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">5 days</span> </td>
+                                <td class="govuk-table__cell">N/A<a href="#"></a></td>
                                 <td class="govuk-table__cell"><a href="mywork-s2o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                         </tbody>
