--- a/app/views/caseaccess/pages/mywork.html
+++ b/app/views/caseaccess/pages/mywork.html
@@ -14,7 +14,7 @@ My work
     </div>
     <p>See your tasks and view tasks available for you to pick up.</p>
     {{ govukButton({
-  text: "Show my work settings",
+  text: "Filter my work",
   classes: "govuk-button--secondary"
 }) }}
     <div class="hmcts-scrollable-pane">
@@ -36,7 +36,6 @@ My work
                 My cases
               </a>
             </li>
-
           </ul>
         </nav>
                     <table class="govuk-table ">
@@ -47,31 +46,32 @@ My work
                               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
                               <th scope="col" class="govuk-table__header"></th>
                               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
                               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;" aria-sort="none"></th>
                           </tr>
                         </thead>
                         <tbody class="govuk-table__body">
                             <tr class="govuk-table__row">
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
-
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">Today</span> </td>
+                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">5 days</span> </td>
+                                <td class="govuk-table__cell">14/03/2021</td>
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                             <tr class="govuk-table__row">
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
-
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Virtual</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path style="fill: orange">
                                 <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                                 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review appellant case</a></td>
-                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">9 nov</span>  </td>
+                                <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">3 days</span>  </td>
+                                <td class="govuk-table__cell">N/A<a href="#"></a></td>
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                         </tbody>
