--- a/app/views/caseaccess/pages/results.html
+++ b/app/views/caseaccess/pages/results.html
@@ -17,24 +17,21 @@ Case details
         <thead class="govuk-table__head">
         <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 350px;">Case name</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;">Status</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;">Location</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "style="width: 200px;">Judge</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 150px;">Next hearing</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 130px;">Access</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 84px;"></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;">Service</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 350px;">Court or hearing centre</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "style="width: 100px;">Status</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 200px;"></th>
         </tr>
         </thead>
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Robert Saddlebrook</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Smith</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018">View</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Civil Justice Centre</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Open</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018">Challenged access</a></td>
             </tr>
+  
         </tbody>
     </table>
 {% endblock %}
